# ifcb-analysis

./: .dockerignore  Dockerfile  README.md  environment.yml  fix-tensorrt-libs.sh  process.py  requirements.txt  setup.cfg
src/python/ifcb_analysis/: all.py  classify.py  perimeter.py  process.py  ringwedge.py
src/python/ifcb_features/scripts/: process_bins.py
src/python/tests/: test_process-bin.py
src/python/tests/data/reference/: D20141117T234033_IFCB102_fea_v2.csv
