[metadata]
name = ifcb-features
version = 0.1
description = Package to extract and classify features from IFCB data
url = https://github.com/axiom-data-science/ifcb-analysis/tree/main
classifiers =
    Programming Langugage :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
license = MIT
license_file = LICENSE

[sdist]
formats = gztar, zip

[check-manifest]
ignore =
    *.m
    *.yaml
    *.yml
    src/matlab

[options]
install_requires =
    bokeh
    cython
    numpy
    pandas
    phasepack
    protobuf
    pyfftw
    pyifcb
    scikit-image
    scipy
    tensorflow

package_dir =
    = src/python
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src/python

[options.entry_points]
console_scripts =
    process-bins = ifcb_analysis.process:cli_wrapper
